...
        }}
      >
        <Tabs.Screen
          name="index"
          options={{
            title: t('common.home'),
            tabBarButtonTestID: 'home-tab',
            tabBarIcon: ({ color }) => <Home size={iconSize} color={color} />,
          }}
        />
        <Tabs.Screen
          name="discover"
          options={{
...
          }}
        />
        <Tabs.Screen
          name="profile"
          options={{
            title: t('common.profile'),
            tabBarButtonTestID: 'profile-tab',
            tabBarIcon: ({ color }) => <User size={iconSize} color={color} />,
          }}
        />
      </Tabs>
      <TutorialOverlay />
    </>
...
